# cor-iesu-ai

./: .gitignore  .pre-commit-config.yaml  AI.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  README.md  pyproject.toml
manage/: update_translations.py
src/: manage.py
src/adoration/: admin.py  api_urls.py  apps.py  const.py  forms.py  maintainer_urls.py  maintainer_views.py  models.py  tests.py  urls.py  views.py
src/adoration/management/commands/: fix_maintainer_permissions.py
src/adoration/migrations/: 0001_initial.py  0002_periodassignment_deletion_token_collectionmaintainer.py  0003_add_privacy_fields.py  0004_transform_existing_data.py  0005_finalize_privacy_fields.py  0006_collection_available_languages.py  0007_auto_20260103_2200.py  0008_add_iterations_field.py  0009_update_email_hash_field.py  0010_remove_old_assignments.py  0011_setup_maintainer_permissions.py  0012_maintainerperiod_maintainer_periods_and_more.py  0013_populate_default_config_values.py  0014_alter_config_name.py
src/adoration/static/adoration/css/: language-switcher.css
src/adoration/static/adoration/js/: language-switcher.js
src/adoration/templates/: base.html
src/adoration/templates/adoration/: delete_confirm.html  language_switcher.html  registration.html
src/adoration/templates/adoration/maintainer/: assignment_list.html  base.html  collection_confirm_delete.html  collection_detail.html  collection_form.html  collection_list.html  dashboard.html  period_confirm_delete.html  period_form.html  period_list.html  user_promotion.html
src/adoration/templates/registration/: login.html
src/adoration/templatetags/: language_tags.py
src/coreiesuai/: asgi.py  settings.py  urls.py  wsgi.py
src/locale/nl/LC_MESSAGES/: django.po
src/locale/pl/LC_MESSAGES/: django.po
src/staticfiles/adoration/css/: language-switcher.css
tests/: __init__.py  conftest.py  settings.py
tests/integration/: test_api_multilingual.py  test_deletion_language_switching.py  test_english_switching_fix.py  test_language_tags.py  test_multilingual.py  test_privacy.py
tests/unit/: __init__.py  test_chrome_devtools.py
tests/unit/adoration/: __init__.py  test_additional_coverage.py  test_admin.py  test_const.py  test_forms.py  test_maintainer_functionality.py  test_maintainer_views.py  test_models.py  test_period_counters.py  test_urls.py  test_views.py
tests/unit/coreiesuai/: __init__.py
