[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cor-iesu-ai"
version = "0.1.0"
description = "Package for managing adoration of Most Holy Sacrament"
requires-python = ">=3.12"
dependencies = ["django>=6.0", "polib>=1.2.0", "gunicorn>=23.0.0", "mysqlclient>=2.2.7", "django-stubs-ext>=5.2.8"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",
    "D100",  # public module
    "D104",  # public package
    "D105",  # magic methods
    "DCO010", # duplicate of public method
    "DCO060", # public attributes - they're already documented if it is a property.
]
exclude = [
    "build",
    "tests",
]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
strict = true
addopts = ["-vv", "-s"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
fail_under = 85

[tool.mypy]
packages = ["src"]
exclude = [
    "tests",
    "src/manage.py",
    "src/adoration/migrations",
]
ignore_missing_imports = true
warn_unused_ignores = false
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "coreiesuai.settings"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "flake8",
    "flake8-black",
    "django-stubs[compatible-mypy]",
    "django-test>=0.4030",
    "pytest-django>=4.11.1",
]
